2004-10-31  Andrew Cagney  <cagney@gnu.org>

	* gdbarch.sh (in_solib_call_trampoline): Delete.
	* gdbarch.h, gdbarch.c: Re-generate.

	* hppa-tdep.c (hppa_stub_unwind_sniffer): Replace
	IN_SOLIB_CALL_TRAMPOLINE with tdep.in_solib_call_trampoline.
	* hppa-tdep.h (struct gdbarch_tdep): Add in_solib_call_trampoline.
	* hppa-hpux-tdep.c (hppa_hpux_init_abi): Set same.
	* hppa-linux-tdep.c (hppa_linux_init_abi): Ditto.

2004-10-31  Mark Kettenis  <kettenis@gnu.org>

	* mipsnbsd-nat.c: Include "target.h" and "inf-ptrace.h".
	(mipsnbsd_fetch_inferior_registers): Rename from
	fetch_inferior_registers.  Make static.
	(mipsnbsd_store_inferior_registers): Rename from
	store_inferior_registers.  Make static.
	(_initialize_mipsnbsd_nat): New function and prototype.
	* Makefile.in (mipsnbsd-nat.o): Update dependencies.
	* config/mips/nbsd.mh (NAT_CLIBS, NAT_FILE): Remove variables.
	(NATDEPFILES): Remove infptrace.o and inftarg.o.  Add
	inf-ptrace.o.

2004-10-31  Andrew Cagney  <cagney@gnu.org>

	* xstormy16-tdep.c (xstormy16_in_solib_call_trampoline)
	(xstormy16_gdbarch_init): Do not set in_solib_call_trampoline,
	delete corresponding unused function.
	* armnbsd-tdep.c (arm_netbsd_aout_init_abi): Really do not set
	in_solib_call_trampoline.
	* config/arm/tm-embed.h (IN_SOLIB_CALL_TRAMPOLINE): Delete.
	* config/powerpc/tm-linux.h: Delete #undef IN_SOLIB_CALL_TRAMPOLINE.
	* config/mips/tm-nbsd.h: Ditto.
	* config/arm/tm-linux.h: Ditto.
	* config/mips/tm-linux.h: Ditto.

	* armnbsd-tdep.c (arm_netbsd_aout_init_abi)
	(arm_netbsd_aout_in_solib_call_trampoline): Do not set
	in_solib_call_trampoline, delete corresponding unused function.
	* vaxnbsd-tdep.c (vaxnbsd_aout_in_solib_call_trampoline) 
	(vaxnbsd_aout_init_abi): Ditto.
	* sparcnbsd-tdep.c (sparcnbsd_aout_in_solib_call_trampoline) 
	(sparc32nbsd_aout_init_abi): Ditto.
	* ppc-linux-tdep.c (ppc64_in_solib_call_trampoline) 
	(ppc_linux_init_abi): Ditto.
	* ns32knbsd-tdep.c (ns32knbsd_aout_in_solib_call_trampoline) 